change to highlyreco

--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
 </head>
 <body>
     <div id="main">
-        <img src="logo.png" alt="Logo Image">
-        <h1>Company Name</h1>
-        <h2>Our website is currently under construction. </h2>
+        <!-- <img src="logo.png" alt="Logo Image"> -->
+        <h1>Highlyreco V2</h1>
+        <h2>Highly recommended stuff from people you love</h2>
         <div id="progress"><div id="fill"><div id="barpercent"><h3>35%</h3></div></div></div>
+        <p>No email collection. Send me an email instead if you want to be notified when we go live - alexjv89@gmail.com</p>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </body>
